# ChangeLog for dev-libs/libksba
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.79 2007/10/09 14:57:54 angelos Exp $

  09 Oct 2007; Christoph Mende <angelos@gentoo.org> libksba-1.0.2.ebuild:
  Stable on amd64 wrt bug #194113

  05 Oct 2007; Tom Gall <tgall@gentoo.org> libksba-1.0.2.ebuild:
  stable on ppc64

  02 Oct 2007; Raúl Porcel <armin76@gentoo.org> libksba-1.0.2.ebuild:
  alpha/ia64 stable wrt #194113

  30 Sep 2007; Markus Meier <maekke@gentoo.org> libksba-1.0.2.ebuild:
  x86 stable, bug #194113

  29 Sep 2007; Lars Weiler <pylon@gentoo.org> libksba-1.0.2.ebuild:
  stable ppc, bug #194113

  29 Sep 2007; Jeroen Roovers <jer@gentoo.org> libksba-1.0.2.ebuild:
  Stable for HPPA (bug #194113).

  28 Sep 2007; Ferris McCormick <fmccor@gentoo.org> libksba-1.0.2.ebuild:
  Sparc stable --- Bug #194113 --- all tests pass.

  22 Jul 2007; Tom Gall <tgall@gentoo.org> libksba-1.0.0.ebuild:
  stable on ppc64

  14 Jul 2007; Raúl Porcel <armin76@gentoo.org> libksba-1.0.0.ebuild:
  alpha stable

  06 Jul 2007; Alon Bar-Lev <alonbl@gentoo.org> libksba-1.0.2.ebuild:
  ebuild cleanups

  06 Jul 2007; Alon Bar-Lev <alonbl@gentoo.org> libksba-1.0.2.ebuild:
  Update license

*libksba-1.0.2 (06 Jul 2007)

  06 Jul 2007; Alon Bar-Lev <alonbl@gentoo.org> +libksba-1.0.2.ebuild:
  Version bump

  29 Jun 2007; Lars Weiler <pylon@gentoo.org> libksba-1.0.0.ebuild:
  Stable on ppc; bug #183528.

  29 Jun 2007; Christoph Mende <angelos@gentoo.org> libksba-1.0.0.ebuild:
  Stable on amd64 wrt bug #183528

  23 Apr 2007; Raúl Porcel <armin76@gentoo.org> libksba-1.0.0.ebuild:
  x86 stable

  15 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> libksba-1.0.0.ebuild:
  Stable on sparc

  25 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org> libksba-1.0.0.ebuild:
  Stable on MIPS.

  12 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  libksba-0.9.15.ebuild:
  stable x86, bug #161262
