@@ -1,8 +1,6 @@
-DIST libksba-0.9.16.tar.bz2 496412 RMD160 ec07c02d032cff3ea0196ac723edfab8dd97f2d9 SHA1 ab24c72d943b3aa7d52d36d35b64399dee3c0c24 SHA256 b0c59b1fc58c8854b3623fa78b67b46c9ad3d5aff70dd6e7b9b1280c0e5be685
 DIST libksba-1.0.0.tar.bz2 502130 RMD160 c2734dae2d4e2dc36a55512271134c79efbae135 SHA1 aefe3f5c7f8d1faedc9497df09123c90a789ffe1 SHA256 e28858988a37bf9a7421e9d727c2ab2f0253e6fe540e4a5df59e6b42b1480763
 DIST libksba-1.0.2.tar.bz2 525731 RMD160 9b26e0551337613cf8e9d976af3b5223fa0929a8 SHA1 4d2c4a99c313b799590bf3fc223179c454e268b5 SHA256 9047a7adcbb445091fa838bdab777b0a71e05a437b130db0cb737aa55a8072ca
-EBUILD libksba-0.9.16.ebuild 908 RMD160 90e637e73fa8e3af9aba92096d14a25838fb20bc SHA1 96d3a301fd39393c83d9efffed204e77a82dba2e SHA256 deb891f8545435c9794945fccda6bbfd7e11f0734370f5781df1689116058525
 EBUILD libksba-1.0.0.ebuild 914 RMD160 1910231040fd24035eaefdd1d551ced72c37cfa9 SHA1 c28e8f81ebdbeff65b67076d353d7c25bd6912c4 SHA256 4912f70ba767812f4b98f000c29d8e8fb2c3831c853b4b3486d6b1eae4529984
 EBUILD libksba-1.0.2.ebuild 712 RMD160 77a96d8e2fd4219edf62312a06272457f3842ebb SHA1 e61ea0b32a9d08df65b7bef0b9f2f301dcd7253c SHA256 ea8320b9c090016dc0d1a25d8ab7bb7c56cac1b5335f390a42994368ec7e4a4d
-MISC ChangeLog 9027 RMD160 fd534c1ca58651abc41e9e8fe0de78d3f2b72489 SHA1 89dbcea1fc8bf2169fba8db3130bcc65877d5465 SHA256 527befef5d6916769d24287598ba0f7aab4d29ce6c3b5a751249296484086faf
+MISC ChangeLog 9183 RMD160 ad775f52d17ab294a42d821d8cb719f08d053eba SHA1 bb68907af2b001eef2fc086534467cffab867f28 SHA256 5cfe385b9d42b52d1114be9c140074dba53eaa506601d8826a8f29edd7d2e6b7
 MISC metadata.xml 286 RMD160 c2b5969811571490e2608996feac695e4ffecc42 SHA1 77a701b4c2687cf6c59546f4906e0386061acdc8 SHA256 b6b7dbc1fbeeab10f65ba2033a683592da35c19c25f40edf0d2d2a92cca9d87a
